<resources>
    <string name="app_name">Podchody</string>
    <string name="start_new_game">Nowa gra</string>
    <string name="lobby_screen">Pokój gry</string>
    <string name="settings">Ustawienia</string>
    <string name="logout">Wyloguj</string>
    <string name="email">E-mail</string>
    <string name="password">Hasło</string>
    <string name="log_in">Zaloguj!</string>
    <string name="logon">Logowanie</string>
    <string name="register">Rejestruj</string>
    <string name="registration">Rejestracja</string>
    <string name="credentials_not_specified">Nie podałeś nazwy użytkownika lub hasła</string>
    <string name="wrong_credentials">Niewłaściwy login lub hasło!</string>
    <string name="name">Nazwa użytkownika</string>
    <string name="end_game">Koniec gry</string>
    <string name="result">Wynik:</string>
    <string name="result_win">Zwycięstwo!</string>
    <string name="result_lose">Przegrana!</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!--Client-side locale strings-->
    <string name="wrong_password">Błędne hasło!</string>
    <string name="internal_error">Wewnętrzny błąd</string>
    <string name="email_not_found">Nie znaleziono adresu e-mail</string>
    <string name="wrong_code">Błędny kod!</string>
    <string name="wrong_username">Błędna nazwa użytkownika</string>
    <string name="already_logged">Użytkownik już zalogowany!</string>
    <string name="email_exists">Podany e-mail już istnieje!</string>
    <string name="username_taken">Nazwa użytkownika w użyciu!</string>
    <string name="changed">Zmieniono pomyślnie</string>
    <string name="unexpected_error">To nie miało być dla Twoich oczu...</string>
    <string name="oops">Ups!</string>
    <string name="service_connected">Usługa połączona</string>
    <string name="service_connection_lost">Połączenie z usługą utracone</string>

    <string name="error">Błąd</string>
    <string name="fuck_up">Zjebało się</string>
    <string name="socket_connected">Socket podłączony</string>
    <string name="connection_failure">Błąd połączenia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrering_success">Rejestracja powiodła się!</string>
    <string name="e_mail">E-mail</string>
    <string name="registration_success">Rejestracja przebiegła pomyślnie!</string>
    <string name="fill_form">Wypełnij wszystkie pola formularza rejestracji</string>
    <string name="registration_error">Wystąpił błąd przy rejestracji</string>
    <string name="password_repeat">Powtórz hasło</string>
    <string name="passwords_dont_match">Wpisane hasła nie są identyczne!</string>
    <string name="create_lobby">Stwórz nową grę</string>
    <string name="join_existing_game">Dołącz do istniejącej gry</string>
    <string name="creating_new_game">Tworzę nową grę…</string>
    <string name="joining_existing_game">Dołączam do istniejącej gry…</string>
    <string name="join_pursuit_team">Dołącz do ścigających</string>
    <string name="join_escape_team">Dołącz do uciekających</string>
    <string name="ready_start_game">Gotowy</string>
    <string name="pursuit_team">Ścigający</string>
    <string name="escape_team">Uciekający</string>
    <string name="uncategorized">Nieprzydzielony</string>
    <string name="new_task">Nowe zadanie!</string>
    <string name="sent">Wysłane!</string>
    <string name="prefs_vibrations_only">prefs_vibrations_only</string>
    <string name="prefs_only_wifi">prefs_only_wifi</string>
    <string name="prefs_title_use_wifi_only">Używaj tylko WiFi</string>
    <string name="prefs_header_network">Połączenie z siecią</string>
    <string name="prefs_header_ux">Użytkowanie aplikacji</string>
    <string name="prefs_title_use_vibration_only">Używaj tylko wibracji</string>
    <string name="prefs_summary_vibration_only_on">Urządzenie będzie tylko wibrować</string>
    <string name="prefs_summary_vibration_only_off">Aplikacja będzie powiadamiać za pomocą sygnału dźwiękowego</string>
    <string name="leave_hint">Zostaw wskazówkę</string>
    <string name="get_tasks">Pobierz zadania</string>
    <string name="map_loading">Ładowanie mapy</string>
    <string name="player_pinpointing">Lokalizowanie gracza</string>
    <string name="last_hint">Ostatni</string>
    <string name="ok">OK</string>
</resources>
