<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_main_title_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size_big"
        android:text="@string/app_name"/>
    <View
        android:id="@+id/view_empty_pivot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"/>

    <!--Start game-->
    <RelativeLayout
        android:id="@+id/rl_start_new_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_main_title_bar"
        android:layout_above="@id/view_empty_pivot">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/start_new_game"/>
    </RelativeLayout>

    <!--Settings-->
    <RelativeLayout
        android:id="@+id/rl_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view_empty_pivot"
        android:layout_toStartOf="@id/view_empty_pivot">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings"/>
    </RelativeLayout>

    <!--Logout-->
    <RelativeLayout
        android:id="@+id/rl_logout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view_empty_pivot"
        android:layout_toEndOf="@id/view_empty_pivot">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/logout"/>
    </RelativeLayout>

</RelativeLayout>
