<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" android:weightSum="1"
              android:background="@color/backgroundColor">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/registration"
            android:textSize="@dimen/text_size_big"
            style="@style/StandardTextView"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_marginTop="10dp"
            style="@style/StandardTextView"
    />
    <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            style="@style/StandardEditText"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            style="@style/StandardTextView"
    />
    <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            style="@style/StandardEditText"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_repeat"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            style="@style/StandardTextView"
    />
    <EditText
            android:id="@+id/et_repeated_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            style="@style/StandardEditText"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            style="@style/StandardTextView"
    />
    <EditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            style="@style/StandardEditText"
    />

    <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/register"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textAlignment="center" android:textAllCaps="false"
            android:textColor="#000" android:textSize="@dimen/text_size_medium"
            android:layout_marginLeft="50dp" android:layout_marginRight="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:autoText="false"
            android:background="@drawable/roundedbutton"
    />

</LinearLayout>